force-app/main/default/objects/SBQQ__PriceAction__c/fields/SBQQ__Field__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Field__c</fullName>
        <inlineHelpText>Select the field you want updated when the conditions are met.</inlineHelpText>
        <label>Target Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unit Price</fullName>
                </value>
                <value>
                    <fullName>Discount (%)</fullName>
                </value>
                <value>
                    <fullName>Discount (Amt)</fullName>
                </value>
                <value>
                    <fullName>Markup (%)</fullName>
                </value>
                <value>
                    <fullName>Markup (Amt)</fullName>
                </value>
                <value>
                    <fullName>SBQQ__SpecialPrice__c</fullName>
                </value>
                <value>
                    <fullName>SBQQ__ListPrice__c</fullName>
                </value>
                <value>
                    <fullName>SBQQ__SpecialPriceType__c</fullName>
                </value>
                <value>
                    <fullName>SBQQ__OriginalPrice__c</fullName>
                </value>
                <value>
                    <fullName>Total_Discount_Per_Volume__c</fullName>
                </value>
                <value>
                    <fullName>Total_Discount_3rd_Party_Products__c</fullName>
                </value>
                <value>
                    <fullName>Total_Discount_UiPath_Products__c</fullName>
                </value>
                <value>
                    <fullName>Total_Discount_Premium_Care__c</fullName>
                </value>
                <value>
                    <fullName>Total_Discount_Professional_Services__c</fullName>
                </value>
                <value>
                    <fullName>Total_Discount_UiPath_Products_Currency__c</fullName>
                </value>
                <value>
                    <fullName>Total_Regular_Price_UiPath_Products__c</fullName>
                </value>
                <value>
                    <fullName>Total_Discount_3rd_Party_Products_Curren__c</fullName>
                </value>
                <value>
                    <fullName>Total_Regular_Price_3rd_Party_Products__c</fullName>
                </value>
                <value>
                    <fullName>Total_List_Price_UiPath_Products__c</fullName>
                </value>
                <value>
                    <fullName>Total_Discount_UiPath_Products_List_Pric__c</fullName>
                </value>
                <value>
                    <fullName>Total_List_Price_3rd_Party_Products__c</fullName>
                </value>
                <value>
                    <fullName>Total_Discount_3rd_Party_List_Price__c</fullName>
                </value>
                <value>
                    <fullName>Business_Type__c</fullName>
                </value>
                <value>
                    <fullName>Quote_Line_Total__c</fullName>
                </value>
                <value>
                    <fullName>Subscription_Total__c</fullName>
                </value>
                <value>
                    <fullName>Product_Version__c</fullName>
                </value>
                <value>
                    <fullName>SBQQ__RegularPrice__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>