force-app/main/default/objects/SBQQ__PriceAction__c/fields/SBQQ__SourceLookupField__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__SourceLookupField__c</fullName>
        <description>API Name of the field to return from the row matching the condition.</description>
        <inlineHelpText>API Name of the field to return from the row matching the condition.</inlineHelpText>
        <label>Source Lookup Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SBQQ__Value__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>