force-app/main/default/objects/SBQQ__PriceAction__c/fields/SBQQ__TargetObject__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__TargetObject__c</fullName>
        <inlineHelpText>Use Quote or Quote Line where Price Rule Evaluation Scope = Calculation, Use Product Option where Price Rule Evaluation Scope = Configuration</inlineHelpText>
        <label>Target Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Quote</fullName>
                </value>
                <value>
                    <fullName>Quote Line</fullName>
                </value>
                <value>
                    <fullName>Product Option</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>