force-app/main/default/objects/SBQQ__PriceAction__c/validationRules/SBQQ__Target_Object_Validation.validationRule-meta.xml
<ValidationRule>
        <fullName>SBQQ__Target_Object_Validation</fullName>
        <active>true</active>
        <description>Prevents users from creating Price Actions targeting an out-of-scope object.</description>
        <errorConditionFormula>(ISPICKVAL(SBQQ__TargetObject__c, &#39;Product Option&#39;) &amp;&amp; NOT(ISPICKVAL(SBQQ__Rule__r.SBQQ__TargetObject__c, &#39;Product Option&#39;) || ISPICKVAL(SBQQ__Rule__r.SBQQ__TargetObject__c, &#39;Configurator&#39;))) || ((ISPICKVAL(SBQQ__TargetObject__c, &#39;Quote&#39;) || ISPICKVAL(SBQQ__TargetObject__c, &#39;Quote Line&#39;) || ISPICKVAL(SBQQ__TargetObject__c, &#39;Quote Line Pricing Guidance&#39;)) &amp;&amp; NOT(ISPICKVAL(SBQQ__Rule__r.SBQQ__TargetObject__c, &#39;Quote Line&#39;) || ISPICKVAL(SBQQ__Rule__r.SBQQ__TargetObject__c, &#39;Calculator&#39;)))</errorConditionFormula>
        <errorDisplayField>SBQQ__TargetObject__c</errorDisplayField>
        <errorMessage>Price Action Target Object does not match Evaluation Scope</errorMessage>
    </ValidationRule>